; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_os_mswin.c_mch_set_winpos.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_os_mswin.c_mch_set_winpos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_hwnd = common dso_local global i32 0, align 4
@SWP_NOZORDER = common dso_local global i32 0, align 4
@SWP_NOSIZE = common dso_local global i32 0, align 4
@SWP_NOACTIVATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mch_set_winpos(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = call i32 (...) @GetConsoleHwnd()
  %6 = load i32, i32* @s_hwnd, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @SWP_NOZORDER, align 4
  %10 = load i32, i32* @SWP_NOSIZE, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @SWP_NOACTIVATE, align 4
  %13 = or i32 %11, %12
  %14 = call i32 @SetWindowPos(i32 %6, i32* null, i32 %7, i32 %8, i32 0, i32 0, i32 %13)
  ret void
}

declare dso_local i32 @GetConsoleHwnd(...) #1

declare dso_local i32 @SetWindowPos(i32, i32*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
